# Kotsu

./: pyproject.toml  requirements.txt
example/bvh_test/: main.py  motion.bvh  test.bvh
example/simple_robot/: main.py  main2.py  simple_robot.ktm
kotsu/: __init__.py  gen_value.py  joint_struct.py  kinematics.py  kinematics_jacob.py  link_df.py  link_struct.py  robot.py  robot_struct.py  simple_draw.py  state.py
kotsu/basic/: __init__.py  joint_struct.py  link_struct.py  robot_struct.py
kotsu/bvh/: __init__.py  bvh.py  draw.py  kinematics.py  robot.py  struct.py
kotsu/df/: __init__.py  robot_df.py
kotsu/gui/: __init__.py  simple_draw.py
kotsu/kinematics/: __init__.py  kinematics.py  kinematics_jacob.py
kotsu/urdf/: __init__.py  urdf.py
